新增标签查询文本